examples/invalid/semanticErr/declaration/undeclaredScopeVar.wacc
# assignment to variable not declared in current scope
# Output:
# #semantic error#

#Program:#

begin
  begin 
  int x = 5
  end ;
  x = 10
end
